--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div class="row">
       <div class="light">
-        <div class="light__color"></div>
-        <div class="light__color"></div>
-        <div class="light__color"></div>
+        <div class="light__color light__color--red"></div>
+        <div class="light__color light__color--yellow"></div>
+        <div class="light__color light__color--green"></div>
       </div>
     </div>
     <script src="./script.js"></script>
